tests/module/mod58.stderr
mod58.hs:4:1: error: [GHC-99565]
    Multiple default declarations for class ‘Num’
      conflicting default declaration at: mod58.hs:3:1-21

