tests/module/mod58.hs
-- !!! Multiple (identical) default decls
module M where
default (Int,Integer)
default (Int,Integer)
